home-infra-iac/k8s/plex/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: plex
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.example.com`)
      kind: Rule
      services:
        - name: plex
          port: 32400
  tls:
    secretName: plex-tls
